CSS: avoid overlapping of the links and the contents

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -45,7 +45,7 @@ h1
 #contents
 {
     position: absolute;
-    top: 4em;
+    top: 6em;
     left: 32em;
 }
 
